<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kokoroguruma.musicsitefragmenthotta.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginTitleText" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginIdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginIdText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginIdTextHint"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginPassText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginPassTextHint"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginSubmitButtonText" />

        <View
            android:id="@+id/loginSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/loginIntentRegistButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginIntentRegistButtonText" />

    </LinearLayout>
</FrameLayout>
