<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kokoroguruma.musicsitefragmenthotta.RegistActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registIdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registIdText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registIdTextHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registPassText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registPassTextHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registMailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registMailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registMailTextHint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/registSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registSubmitButtonText" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
