<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/listPlayingPlayButton"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listPlayingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listPlayingTitleText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/listPlayingComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/listPlayingCommentText"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

        <Button
            android:id="@+id/listPlayingPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/playingPlayButtonText" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>